Refs #476: fix bug - Donează link was not working; better alignment for credit card icon

--- a/wwwbase/css/responsive.css
+++ b/wwwbase/css/responsive.css
@@ -73,6 +73,19 @@
   margin-left: 20px;
 }
 
+.donateLink a {
+  color: #FFF;
+}
+
+.donateLink a:hover {
+  text-decoration: none;
+}
+
+.glyphicon-credit-card {
+  top: 2px;
+  padding-right: 4px;
+}
+
 .table-caption {
     padding: 10px;
     font-weight: bold;
